--- a/styles/style.css
+++ b/styles/style.css
@@ -19,3 +19,14 @@ body {
 html {
     height:100%;
 }
+.inputbox {
+    background-color: black;
+    border: none;
+    outline: none;
+    color: white;
+    font-family: monospace;
+
+}
+.inputbox:focus {
+    outline:none;
+}
