Empty command isn't saved in history, fixed bug in echo to file, added nyancat.(Because why not.)

--- a/styles/style.css
+++ b/styles/style.css
@@ -10,7 +10,8 @@
     background-color: black;
     color: white;
     position: absolute;
-    white-space: pre;
+    white-space: pre-wrap;
+    width: 100%;
 }
 body {
     overflow:hidden;
